# argon

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
disk-builder/: Cargo.toml  build.rs
disk-builder/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  panic.rs  serial.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  gdt.rs  idt.rs  mod.rs  percpu.rs  pic.rs  pit.rs  security.rs  syscall.rs
kernel/src/block/: mod.rs
kernel/src/display/: framebuffer.rs  mod.rs  vga.rs
kernel/src/drivers/: ahci.rs  keyboard.rs  mod.rs  nvme.rs  pci.rs
kernel/src/fs/: fat32.rs  mod.rs
kernel/src/future/: elf.rs  mod.rs  process.rs  ramfs.rs  scheduler.rs  syscall.rs  usermode.rs  vfs.rs
kernel/src/memory/: address_space.rs  allocator.rs  frame_alloc.rs  heap.rs  mod.rs  paging.rs  uaccess.rs
kernel/src/smp/: mod.rs
userland/: argon.ld
userland/argon-user/: Cargo.toml
userland/argon-user/src/: lib.rs
userland/shell/: Cargo.toml  build.rs
userland/shell/src/: main.rs
