[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15", features = ["instructions"] }
uart_16550 = "0.3"
spin = "0.9"
linked_list_allocator = "0.10"

[dependencies.shell]
path = "../userland/shell"
artifact = "bin:shell"
target = "x86_64-unknown-none"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
